Fixes #8. Replace clazz.newInstance() with clazz.getDeclaredConstructor().newInstance()