@@ -128,11 +128,11 @@ public abstract class AbstractCSVReadProcessor<T> {
         ReadWrapper wrap = this.wrapperInstantiated.get(wrapper);
         if (wrap == null) {
             try {
-                wrap = wrapper.newInstance();
+                wrap = wrapper.getDeclaredConstructor().newInstance();
                 this.wrapperInstantiated.put((Class<ReadWrapper>) wrapper, wrap);
 
                 return wrap;
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 LOGGER.log(Level.SEVERE, "Make sure your ReadWrapper class has a public no args constructor", e);
                 throw new WrapperInstantiationException("ReadWrapper class does not have public no args constructor");
             }
