@@ -52,7 +52,7 @@ class CSVOrderReadProcessor<T> extends AbstractCSVReadProcessor<T> {
                 consumer.accept(getCSVRecord(iterator, map));
             }
 
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (ReflectiveOperationException e) {
             LOGGER.log(Level.SEVERE,
                     "Could not create object. Check to make sure the you have a visible default constructor", e);
             throw new UninstantiableException(
@@ -60,9 +60,9 @@ class CSVOrderReadProcessor<T> extends AbstractCSVReadProcessor<T> {
         }
     }
 
-    private T getCSVRecord(Iterator<CSVRecord> iterator, Map<Integer, CSVReadAnnotationManager> map) throws InstantiationException, IllegalAccessException {
+    private T getCSVRecord(Iterator<CSVRecord> iterator, Map<Integer, CSVReadAnnotationManager> map) throws ReflectiveOperationException {
         CSVRecord record = iterator.next();
-        Object obj = parsedClazz.newInstance();
+        T obj = parsedClazz.getDeclaredConstructor().newInstance();
         for (Entry<Integer, CSVReadAnnotationManager> entry : map.entrySet()) {
             CSVReadAnnotationManager cm = entry.getValue();
             int order = entry.getKey();
@@ -78,6 +78,6 @@ class CSVOrderReadProcessor<T> extends AbstractCSVReadProcessor<T> {
             }
 
         }
-        return (T) obj;
+        return obj;
     }
 }
